HelloUltraviolet/Fixtures/RejectedSource/Expressions/YieldTypeMismatch/Expected.uv
//! Expected diagnostic metadata for the YieldTypeMismatch rejected-source specimen.

expectedDiagnostic("E-CON-0211", "rule.21.Yield-Out-Err")
